# RAG

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  eval.yml  wiki.yml
backend/api/: dependencies.py  main.py  rate_limit.py  schemas.py
backend/api/guardrails/: pii.py
backend/api/load/: locustfile.py
backend/api/monitoring/: metrics.py  tracing.py
backend/api/routers/: __init__.py  admin.py  bulk_ingest.py  health.py  ingest.py  query.py
backend/core/: config.py  data_browser.py  directory_ingest.py  models.py  pipeline.py  suggested_questions.py  text_heuristics.py
backend/generation/: answer_generator.py
backend/ingestion/: ingestion_pipeline.py
backend/ingestion/embeddings/: colpali_embedder.py  image_embedder.py  multimodal_embed.py  text_embedder.py
backend/ingestion/generation/: __init__.py  answer_generator.py
backend/ingestion/parsers/: base_parser.py  figure_parser.py  ocr_utils.py  page_image_parser.py  pdf_text_parser.py  table_parser.py
backend/ingestion/retrieval/: __init__.py  chunk_filters.py  multimodal_retriever.py  reranker.py
backend/ingestion/stores/: qdrant_store.py
backend/retrieval/: asset_refs.py  chunk_filters.py  cross_encoder_reranker.py  flashrank_reranker.py  hybrid_retriever.py  ingest.py  multimodal_retriever.py  parent_expand.py  preprocessing.py
backend/retrieval/chunking/: base_chunker.py  recursive_chunker.py  semantic_chunker.py
backend/retrieval/enrichment/: context_enricher.py  section_paths.py
backend/retrieval/retrieval/: flashrank_reranker.py  hybrid_retriever.py
backend/scaling/: __init__.py  bulk_queue.py
backend/scaling/embedding/: cached_embed.py  dedup.py  fingerprint.py  redis_cache.py
backend/scaling/jobs/: __init__.py  bulk_job_store.py
backend/scaling/monitoring/: metrics.py
backend/scaling/pipeline/: ingest_modes.py  scalable_ingest.py
backend/taxonomy/: __init__.py  hooks.py
capstone/: README.md  __init__.py  cli.py  client.py  display.py  pipeline.py  run_exit_test.py  ui.py
data/benchmarks/: golden_qa.json  long_doc_qa.json
data/taxonomies/: classification.ttl
deploy/: README.md  bootstrap-oracle.sh  fly.toml
docker/: Dockerfile  Dockerfile.phase1  Dockerfile.phase1.gpu  Dockerfile.phase3  docker-compose.demo.yml  docker-compose.gpu.yml  docker-compose.yml
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/images/: README.md
docs/wiki/: Architecture.md  Configuration.md  Evaluation.md  Home.md  RAG-Pipeline.md  README.md  Retrieval.md  _Footer.md  _Sidebar.md
documind/: README.md  __init__.py
documind/cli/: __init__.py
documind/core/: __init__.py
documind/evaluation/: __init__.py
documind/ingestion/: __init__.py
documind/production/: __init__.py
documind/retrieval/: __init__.py
documind/scaling/: __init__.py
documind/taxonomy/: __init__.py
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  folder-picker.d.ts  types.ts  vite-env.d.ts
notebooks/: 01_multimodal_ingestion.ipynb  02_long_doc_retrieval.ipynb  03_scalable_ingestion.ipynb  04_taxonomy_generation.ipynb  05_evaluation.ipynb  06_production_api.ipynb  README.md
phases/: __init__.py  _legacy.py
phases/phase_01_multimodal_ingestion/: README.md  demo.py  ingestion_pipeline.py
phases/phase_02_long_doc_retrieval/: README.md  benchmark.py  ingest.py  run_exit_test.py
phases/phase_03_scalable_ingestion/: README.md  bulk_ingest.py  bulk_queue.py  run_exit_test.py
phases/phase_04_taxonomy_generation/: README.md  hooks.py  run_exit_test.py
phases/phase_05_evaluation/: README.md  index_check.py  metrics.py  ragas_metrics.py  report_html.py  run_full_eval.py
phases/phase_06_production/: README.md  run_exit_test.py
scripts/: generate_book.py  generate_bulk_pdfs.py  generate_phase_notebooks.py  generate_sample_report.py  run_eval_report.py
shared/: config.py  data_browser.py  directory_ingest.py  models.py  pdf_paths.py  pipeline.py  suggested_questions.py
tasks/: lessons.md  todo.md
tests/: _factories.py  conftest.py  test_data_browser.py  test_documind_package.py  test_models.py  test_pdf_paths.py  test_pipeline.py  test_suggested_questions.py
tests/api/: test_api.py
tests/capstone/: test_pipeline.py
tests/eval/: __init__.py  conftest.py  golden.py  golden_set.jsonl  metrics.py  test_answer_quality.py  test_metrics.py  test_retrieval.py  thresholds.py
tests/generation/: test_answer_generator.py
tests/ingestion/: conftest.py  test_answer_generator.py  test_base_parser.py  test_chunk_filters.py  test_colpali_embedder.py  test_embed_routing.py  test_multimodal_retriever.py  test_page_image_ocr.py  test_parsers_integration.py  test_pdf_text_merge.py  test_qdrant_store.py
tests/phase1/: conftest.py  test_answer_generator.py  test_base_parser.py  test_chunk_filters.py  test_colpali_embedder.py  test_embed_routing.py  test_multimodal_retriever.py  test_page_image_ocr.py  test_parsers_integration.py  test_qdrant_store.py
tests/phase2/: test_benchmark.py  test_context_enricher.py  test_hybrid_retriever.py  test_parent_expand.py  test_semantic_chunker.py
tests/phase3/: test_bulk_job_store.py  test_dedup.py  test_fingerprint.py  test_ingest_modes.py  test_metrics.py  test_redis_cache.py
tests/phase4/: test_conformity.py  test_loader.py
tests/phase5/: test_golden_set.py  test_index_check.py  test_metrics.py  test_ragas_metrics.py  test_report_html.py
tests/phase6/: test_api.py
tests/retrieval/: test_asset_refs.py  test_chunk_filters.py  test_context_enricher.py  test_hybrid_retriever.py  test_labeled_asset_retrieval.py  test_multimodal_retriever.py  test_parent_expand.py  test_semantic_chunker.py
tests/scaling/: test_bulk_job_store.py  test_dedup.py  test_fingerprint.py  test_ingest_modes.py  test_metrics.py  test_redis_cache.py
tests/taxonomy/: test_conformity.py  test_loader.py
(+80 files in other folders)
