[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documind-backend"
version = "0.1.0"
description = "DocuMind backend — multimodal RAG over PDFs (FastAPI + Qdrant + Celery)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "DYH"}]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "multimodal",
    "qdrant",
    "colpali",
    "llm",
    "fastapi",
    "celery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "rich>=13.0",
    "tqdm>=4.0",
    "httpx>=0.27",
    # Ingestion (PDF parsing, OCR, embeddings, vector store)
    "pymupdf>=1.24",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "pdfplumber>=0.11",
    "pytesseract>=0.3",
    "surya-ocr>=0.6",
    "open_clip_torch>=2.24",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.12.0,<1.13.0",
    "colpali-engine>=0.3",
    "python-docx>=1.1",
    "langchain-qdrant>=0.1",
    # Retrieval (hybrid + reranking + chunking)
    "rank-bm25>=0.2",
    "langchain-text-splitters>=0.3",
    "tiktoken>=0.7",
    "flashrank>=0.2",
    # Scaling (Celery + Redis cache + metrics)
    "redis>=5.0",
    "datasketch>=1.6",
    "prometheus-client>=0.20",
    "aiofiles>=23.0",
    "celery[redis]>=5.4",
    # Taxonomy validation
    "rdflib>=7.0",
    "owlready2>=0.46",
    "rapidfuzz>=3.0",
    "networkx>=3.3",
    # API + guardrails + observability
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45",
    "slowapi>=0.1",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "locust>=2.28",
]
eval = [
    "ragas>=0.2.10",
    "datasets>=2.19",
]

[project.urls]
Homepage = "https://github.com/dyh1265/RAG"
Repository = "https://github.com/dyh1265/RAG"
Issues = "https://github.com/dyh1265/RAG/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require sample PDF or external services",
    "eval: RAG quality benchmarks (Qdrant, embeddings; optional OpenAI / Ragas)",
]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint.per-file-ignores]
"backend/api/load/locustfile.py" = ["E402"]
